<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/wordMainTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/word_Main"
                android:textColor="@color/white"
                android:background="@color/Orange"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="100dp" />

            <Button
                android:id="@+id/Home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                app:icon="@android:drawable/stat_notify_more"
                app:iconSize="40dp"
                app:iconTint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wordADMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/N5_button"
                android:layout_width="293dp"
                android:layout_height="46dp"
                android:text="@string/N5_button"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="131dp" />

            <Button
                android:id="@+id/N4_button"
                android:layout_width="293dp"
                android:layout_height="46dp"
                android:text="@string/N4_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="176dp" />

            <Button
                android:id="@+id/N3_button"
                android:layout_width="293dp"
                android:layout_height="46dp"
                android:text="@string/N3_button"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="222dp" />

            <Button
                android:id="@+id/N2_button"
                android:layout_width="293dp"
                android:layout_height="46dp"
                android:text="@string/N2_button"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="267dp" />

            <Button
                android:id="@+id/N1_button"
                android:layout_width="293dp"
                android:layout_height="46dp"
                android:text="@string/N1_button"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="312dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical" >

            <com.google.android.gms.ads.AdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
